force-app/main/default/objects/Insumo_do_contrato__c/Insumo_do_contrato__c.object-meta.xml
<CustomObject>
    <label>Insumo do contrato</label>
    <nameField>
        <displayFormat>IC {000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insumos do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>