force-app/main/default/objects/Insumo_do_contrato__c/fields/C_digo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_produto__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>