force-app/main/default/objects/Insumo_do_contrato__c/fields/Contrato_de_Fornecimento_de_Insumo__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Fornecimento_de_Insumo__c</fullName>
    <label>Contrato de Fornecimento de Insumo</label>
    <referenceTo>Contrato_de_Fornecimento_de_Insumo__c</referenceTo>
    <relationshipLabel>Insumos do contrato</relationshipLabel>
    <relationshipName>Insumos_do_contrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>