force-app/main/default/objects/Insumo_do_contrato__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Insumos do contrato</relationshipLabel>
    <relationshipName>Insumos_do_contrato</relationshipName>
    <type>Lookup</type>
</CustomField>