force-app/main/default/objects/Insumo_do_contrato__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>